--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ shadow (1:4.2-3+deb8u3pexip1) pexip; urgency=low
       + Update documentation of UMASK: Explain that USERGROUPS_ENAB
         will modify this default for UPGs.
   * debian/login.pam: Don't want pam_exec uname
+  * debian/login.pam: use /run/motd.dynamic
 
  -- John-Mark Bell <jmb@pexip.com>  Fri, 24 Mar 2017 15:31:08 +0000
 
