--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shadow (1:4.13+dfsg1-1pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:58:41 +0000
+
 shadow (1:4.13+dfsg1-1pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
